Task instance Java/126